samples/marketplace-edge/rollout.yaml
apiVersion: magosproject.io/v1alpha1
kind: Rollout
metadata:
  name: marketplace-edge
  namespace: marketplace-edge
  labels:
    app.kubernetes.io/part-of: marketplace-platform
    app.kubernetes.io/managed-by: magos
spec:
  projectRef: marketplace-edge
  strategy:
    steps:
    - name: dev
      selector:
        matchLabels:
          env: dev
    - name: staging
      selector:
        matchLabels:
          env: staging
    - name: prod
      selector:
        matchLabels:
          env: prod
