samples/marketplace-edge/policy.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: require-subnet-entropy
  labels:
    compliance: pci-dss
    owner: cloud-security
    enforcement: blocking
spec:
  evaluation:
    mode: JSON
  matchConditions:
    - name: is-terraform-plan
      expression: 'has(object.planned_values) && has(object.terraform_version)'
  validations:
    - message: 'random_id.server.byte_length must be 1'
      expression: |
        (
          has(object.planned_values.root_module.resources) &&
          object.planned_values.root_module.resources.exists(
            r, r.type == 'random_id' && r.name == 'server' && r.values.byte_length == 1
          )
        )
